...
            "state": "translated",
            "value": "外观"
          }
        }
      }
    },
    "Archive": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "アーカイブ"
          }
...
            "state": "translated",
            "value": "深色"
          }
        }
      }
    },
    "Delete": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "削除"
          }
...
            "state": "translated",
            "value": "标为推广"
          }
        }
      }
    },
    "Mark as unread": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "未読にする"
          }
...
            "state": "translated",
            "value": "周一早上"
          }
        }
      }
    },
    "More": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "その他"
          }
...
            "state": "translated",
            "value": "下次尝试 %@"
          }
        }
      }
    },
    "Next thread": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "次の会話"
          }
...
            "state": "translated",
            "value": "端口"
          }
        }
      }
    },
    "Previous thread": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "前の会話"
          }
...
            "state": "translated",
            "value": "移除"
          }
        }
      }
    },
    "Reply": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "返信"
          }
...
            "state": "translated",
            "value": "选择"
          }
        }
      }
    },
    "Send": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "送信"
          }
...
            "state": "translated",
            "value": "稍后处理"
          }
        }
      }
    },
    "Star": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "スターを付ける"
          }
...
            "state": "translated",
            "value": "已抑制"
          }
        }
      }
    },
    "Suspicious sender": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "送信者が疑わしい"
          }
...
            "state": "translated",
            "value": "未读"
          }
        }
      }
    },
    "Unstar": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "スターを外す"
          }
...
